--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://yandex.st/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="./style.css" rel="stylesheet" type="text/css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
     </script>
     <title>Яндекс отзывы</title>
 </head>
+
 <body>
-    <div id="map" style="width: auto; height: 600px;"></div>
+    <div id="map" style="width: 100%; height: 100%;"></div>
     <script src="/index.js"></script>
 </body>
+
 </html>
