--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://yandex.st/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="./style.css" rel="stylesheet" type="text/css">
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript">
-    </script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=df510596-c46e-48c0-9a8b-6e070b93ad53&lang=ru_RU"
+        type="text/javascript">
+        </script>
     <title>Яндекс отзывы</title>
 </head>
 
